fix: set line-height in normalized h1 to avoid overlapping

--- a/src/sass/_normalize.css
+++ b/src/sass/_normalize.css
@@ -40,6 +40,7 @@ main {
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
+  line-height: 1.2em;
 }
 
 /* Grouping content
